--- a/project2.html
+++ b/project2.html
@@ -36,6 +36,9 @@
       <li>Abraham Lincoln</li>
       <li>George W. Bush</li>
     </ol>
+    <h2> My Favorite Animal </h2>
+    <p> My favorite animal is a dog. 
+      <a href=
   </body>
 
 </html>
