--- a/project2.html
+++ b/project2.html
@@ -38,7 +38,7 @@
     </ol>
     <h2> My Favorite Animal </h2>
     <p> My favorite animal is a dog. 
-      <a href=
+      <a href="https://github.com/luhilions/wdp-f17-casi9/blob/gh-pages/images/IMG_0344.JPG?raw=true
   </body>
 
 </html>
