--- a/project2.html
+++ b/project2.html
@@ -37,8 +37,9 @@
       <li>George W. Bush</li>
     </ol>
     <h2> My Favorite Animal </h2>
-    <p> My favorite animal is a dog. 
-      <a href="https://github.com/luhilions/wdp-f17-casi9/blob/gh-pages/images/IMG_0344.JPG?raw=true
+    <p> My favorite animal is a . 
+      <a href="https://luhilions.github.io/wdp-f17-casi9/project3.html">dog.</a>
+      </p>
   </body>
 
 </html>
