--- a/project3.html
+++ b/project3.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>My Favorite Animal</h1>
-    <img src="images/
+    <img src="images/IMG_0344.jpg" width="200" height="300" alt="puppy sitting in a cookie jar" />
   </body>
 
 </html>
