--- a/project3.html
+++ b/project3.html
@@ -10,7 +10,9 @@
   <body>
     <h1>My Favorite Animal</h1>
     <p>
+      <a href="http://www.psychonomic.org/resource/resmgr/Featured_Content/Content_Pictures/3.1.16puppyincup.jpg">
       <img src="images/IMG_0344.jpg" width="100" height="150" alt="puppy sitting in a cookie jar" />
+      </a>
       A dog is my favorite animal because they are man's best friend. They are very loyal and try their best to be kind and impress you. This dog, in the picture, is sitting in the cookie jar to represent its innocence. 
     </p>
   </body>
