--- a/project2.html
+++ b/project2.html
@@ -37,7 +37,7 @@
       <li>George W. Bush</li>
     </ol>
     <h2> My Favorite Animal </h2>
-    <p> My favorite animal is a . 
+    <p> My favorite animal is a  
       <a href="https://luhilions.github.io/wdp-f17-casi9/project3.html">dog.</a>
       </p>
   </body>
