--- a/project2.html
+++ b/project2.html
@@ -11,7 +11,7 @@
     <h1> Hello World!</h1>
     <h2> A place I would like to visit </h2>
     <a href="http://www.profootballhof.com/assets/1/6/HOF_Gallery_Visit-1.jpg">
-      <img src="images/IMG_0343.jpg" width="200" height="300" alt="Interior of the pro football hall of fame">
+      <img src="images/Interior_of_the_Hall_of_Fame.jpg" width="200" height="300" alt="Interior of the pro football hall of fame">
     </a>
     <p> If I could visit anywhere in the world I would go to Canton, Ohio because it is home to the Pro Football Hall of Fame. I would go there because I am a huge football fan, and I have wanted to go there for a very long time. Another reason I would like to go there is because I can see legends, such as, Terrel Davis and LaDanion Tomlinson. If you want to learn more about the Hall of Fame, <a href="http://www.profootballhof.com"target="_blank">click here.</a> <!--This is the link to the Pro Football Hall of Fame website--> </p>
     <hr>
