--- a/project3.html
+++ b/project3.html
@@ -11,7 +11,7 @@
     <h1>My Favorite Animal</h1>
     <p>
       <a href="https://static.pexels.com/photos/59523/pexels-photo-59523.jpeg">
-      <img src="images/Puppy.jpg" width="100" height="150" alt="puppy" />
+      <img src="images/Puppy.jpeg" width="100" height="150" alt="puppy" />
       </a>
       A dog is my favorite animal because they are man's best friend. They are very loyal and try their best to be kind and impress you. This dog, in the picture, is sitting in the cookie jar to represent its innocence. 
     </p>
