--- a/project4.html
+++ b/project4.html
@@ -9,9 +9,11 @@
 
   <body>
     <h1>Photo Gallery</h1>
-    <h2>
+    <h2>Sports Stars<h2>
     <a href="https://sports.cbsimg.net/images/blogs/antonio_brown_catch_getty.jpg">
-    <img src="images/Antonio_Brown.jpg" width="100" height="100">
+    <img src="images/Antonio_Brown.jpg" width="100" height="100" alt="Antonio Brown catching a pass over an Indianapolis Colts defender" />
+      </a>
+   
   </body>
 
 </html>
