--- a/project4.html
+++ b/project4.html
@@ -51,6 +51,28 @@
         <a href="https://upload.wikimedia.org/wikipedia/commons/0/0e/%2710_Chevrolet_Camaro_RS_%28Orange_Julep%29.jpg">
           <img src="images/Chevy_Camaro.jpg" width="150" height="125" alt="Chevrolette Camaro at a car show. It is the color gray" />
         </a>
+        <h2> Dog Breeds </h2>
+        <h3> German Shepherd </h3>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/20140531_German_Shepard_dog_puppy_3151.jpg/1249px-20140531_German_Shepard_dog_puppy_3151.jpg">
+          <img src="images/German_Shepherd_Puppy.jpg" width="150" height="150" alt="German shepherd puppy with a stick in his mouth" />
+        </a>
+        <h3> Boxer Puppy </h3>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/5/53/Boxer_puppy_fawn_portrai.jpg">
+          <img src="images/Boxer_Puppy.jpg" width="150" height="100" alt="Fawn colored boxer puppy laying his head down and looking up with his eyes" />
+        </a>
+        <h3> English Bulldog </h3>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/b/ba/Rocco_the_Bulldog.jpg">
+          <img src="images/English_Bulldog_Puppy.jpg" width="150" height="100" alt="English bulldog puppy licking his lips" />
+        </a>
+        <h3> French Bulldog </h3>
+        <a href="https://pixabay.com/p-2365684/?no_redirect">
+          <img src="images/French_Bulldog.jpg" width="150" height="100" alt="French bulldog with his front paws on an old basketball in a field" />
+        </a>
+        <h3> Golden Labrador </h3>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/2/26/Yellow_Labrador_puppy_%284165776031%29.jpg">
+          <img src="images/Golden_Lab.jpg" width="150" height="150" alt="Golden lab is standing outside of door on a brick walkway in rainy conditions.
+        </a>
+        <h2> National Landmarks </h2>
         
    
   </body>
