--- a/project4.html
+++ b/project4.html
@@ -30,6 +30,7 @@
           <a href="https://upload.wikimedia.org/wikipedia/commons/7/79/Emmanuel_Sanders_2014.JPG">
             <img src="images/Emmanuel_Sanders.jpg" width="100" height="150" alt="Emmanuel Sanders smiling from the sidlines." />
           </a>
+        <hr> </hr>
        <h2> Car Models </h2>
         <h3> Lamborghini Aventador </h3>
         <a href="https://upload.wikimedia.org/wikipedia/commons/d/d0/Chrome_Blue_and_Orange_Lamborghini_Aventador_%2811658426776%29.jpg">
@@ -51,6 +52,7 @@
         <a href="https://upload.wikimedia.org/wikipedia/commons/0/0e/%2710_Chevrolet_Camaro_RS_%28Orange_Julep%29.jpg">
           <img src="images/Chevy_Camaro.jpg" width="150" height="125" alt="Chevrolette Camaro at a car show. It is the color gray" />
         </a>
+        <hr> </hr>
         <h2> Dog Breeds </h2>
         <h3> German Shepherd </h3>
         <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/20140531_German_Shepard_dog_puppy_3151.jpg/1249px-20140531_German_Shepard_dog_puppy_3151.jpg">
@@ -70,9 +72,31 @@
         </a>
         <h3> Golden Labrador </h3>
         <a href="https://upload.wikimedia.org/wikipedia/commons/2/26/Yellow_Labrador_puppy_%284165776031%29.jpg">
-          <img src="images/Golden_Lab.jpg" width="150" height="150" alt="Golden lab is standing outside of door on a brick walkway in rainy conditions.
+          <img src="images/Golden_Lab.jpg" width="150" height="150" alt="Golden lab is standing outside of door on a brick walkway in rainy conditions" />
         </a>
+        <hr> </hr>
         <h2> National Landmarks </h2>
+        <h3> Grand Canyon </h3>
+        <a href="https://pixabay.com/p-55643/?no_redirect">
+          <img src="images/Grand_Canyon" width="150" height="100" alt="Grand canyon during a sunset" />
+        </a>
+        <h3> St. Louis Gateway Arch </h3>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/6/61/Gateway_Arch_%26_St._Louis_MO_Riverfront_at_Dawn.jpg" >
+          <img src="images/St_Louis_Arch.jpg" width="150" height="100" alt="Gateway Arch in St. Louis Missouri during a sunset" />
+        </a>
+        <h3> Rocky Mountain National Park </h3>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/TRR_Elk_RMNP_June_2012.jpg/1280px-TRR_Elk_RMNP_June_2012.jpg" >
+          <img src="images/Rocky_Mountain_National_Park.jpg" width="150" height="150" alt="Elk grazing in the meadows of the beautiful Rocky Mountain National Park" />
+        </a>
+        <h3> Mesa Verde </h3>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/c/c4/Mesa_Verde_National_Park_Cliff_Palace_Right_Part_2006_09_12.jpg" >
+          <img src="images/Mesa_Verde.jpg" width="150" height="100" alt="Looking down on the clif dwellings at Mesa Verde in Colorado" />
+        </a>
+        <h3> Freedom Tower </h3>
+        <a href="https://c2.staticflickr.com/8/7610/17149522281_3b6ae4c948_b.jpg" >
+          <img src="images/Freedom_Tower.jpg" width="150" height="100" alt="Sunset reflecting onto Freedom Tower" />
+        </a>
+        <hr> </hr>
         
    
   </body>
