--- a/project4.html
+++ b/project4.html
@@ -97,7 +97,13 @@
           <img src="images/Freedom_Tower.jpg" width="150" height="100" alt="Sunset reflecting onto Freedom Tower" />
         </a>
         <hr> </hr>
-        
+        <a href="https://luhilions.github.io/wdp-f17-casi9/project1.html"> Page one </a>
+    <hr> </hr>
+  <a href="https://luhilions.github.io/wdp-f17-casi9/project2.html"> Page two </a>
+  <hr> </hr>
+  <a href="https://luhilions.github.io/wdp-f17-casi9/project3.html"> Page three </a>
+<hr> </hr>
+<a href="https://luhilions.github.io/wdp-f17-casi9/"> Back to home </a>
    
   </body>
 
