--- a/project5.html
+++ b/project5.html
@@ -24,6 +24,25 @@
     <td> ***** </td>
     </tr>
     <tr>
+      <td> Ayo & Teo </td>
+      <td> Rolex </td>
+      <td> ***** </td>
+      </tr>
+    <tr>
+      <td> blackbear </td>
+      <td> do re mi </td>
+      <td> **** </td>
+      </tr>
+    <tr>
+      <td> Flo Rida </td>
+      <td> Cake </td>
+      <td> **** </td>
+      </tr>
+    <tr>
+      <td> DJ Snake, Alesia </td>
+      <td> Bird Machine--Jingle Bells Version </td>
+      <td> ***** </td>
+      </tr>
   </body>
 
 </html>
