--- a/project5.html
+++ b/project5.html
@@ -43,6 +43,30 @@
       <td> Bird Machine--Jingle Bells Version </td>
       <td> ***** </td>
       </tr>
+    <tr>
+      <td> DJ Snake, Alesia </td>
+      <td> Bird Machine </td>
+      <td> *** </td>
+      </tr>
+    <tr>
+      <td> Imagine Dragons </td>
+      <td> Whatever It Takes </td>
+      <td> ***** </tb>
+      </tr>
+    <tr>
+      <td> Imagine Dragons </td>
+      <td> Thunder </td>
+      <td> ***** </td>
+</tr>
+   <tr>
+     <td> Imagine Dragons </td>
+     <td> Warriors </td>
+     <td> **** </td>
+</tr>
+   <tr> 
+     <td> Lecrae </td>
+     <td> Nuthin </td>
+     <td> ***** </td>
   </body>
 
 </html>
