--- a/project5.html
+++ b/project5.html
@@ -67,6 +67,24 @@
      <td> Lecrae </td>
      <td> Nuthin </td>
      <td> ***** </td>
+</tr>
+</table> 
+  <h2> Recently Played </h2>
+    <table>
+      <tr>
+        <td> Thunder </td>
+        <td> Warriors </td>
+      </tr>
+      <tr>
+        <td> Whatever it Takes </td>
+        <td> Cake </td>
+      </tr>
+      <tr>
+        <td> Nuthin </td>
+        <td> XO TOUR LIif3 </td>
+      </tr>
+</table>
+
   </body>
 
 </html>
