--- a/project5.html
+++ b/project5.html
@@ -14,58 +14,69 @@
     <hr> </hr>
     <table border="1">
     <tr>
-    <th> Artist </th>
     <th> Song </th>
+    <th> Artist </th>
+    <th> Genre </th
     <th> Rating </th>
     </tr>
     <tr>
-    <td> Lil Uzi Vert </td>
     <td> XO TOUR LIif3 </td>
+    <td> Lil Uzi Vert </td>
+      <td> Hip-hop/Rap </td>
     <td> ***** </td>
     </tr>
     <tr>
-      <td> Ayo & Teo </td>
       <td> Rolex </td>
+      <td> Ayo & Teo </td>
+      <td> Hip-hop/Rap </td>
       <td> ***** </td>
       </tr>
     <tr>
-      <td> blackbear </td>
       <td> do re mi </td>
+      <td> blackbear </td>
+      <td> Hip-hop </td>
       <td> **** </td>
       </tr>
     <tr>
-      <td> Flo Rida </td>
       <td> Cake </td>
+      <td> Flo Rida </td>
+      <td> Pop </td>
       <td> **** </td>
       </tr>
     <tr>
-      <td> DJ Snake, Alesia </td>
       <td> Bird Machine--Jingle Bells Version </td>
+      <td> DJ Snake, Alesia </td>
+      <td> Dance/Electronic </td>
       <td> ***** </td>
       </tr>
     <tr>
+      <td> Bird Macine </td>
       <td> DJ Snake, Alesia </td>
-      <td> Bird Machine </td>
+      <td> Dance/Electronic </td>
       <td> *** </td>
       </tr>
     <tr>
-      <td> Imagine Dragons </td>
       <td> Whatever It Takes </td>
-      <td> ***** </tb>
+      <td> Imagine Dragons </td>
+      <td> Pop </td>
+      <td> ***** </td>
       </tr>
     <tr>
-      <td> Imagine Dragons </td>
       <td> Thunder </td>
+      <td> Imagine Dragons </td>
+      <td> Pop </td>
       <td> ***** </td>
 </tr>
    <tr>
-     <td> Imagine Dragons </td>
      <td> Warriors </td>
+     <td> Imagine Dragons </td>
+     <td> Pop </td>
      <td> **** </td>
 </tr>
    <tr> 
-     <td> Lecrae </td>
      <td> Nuthin </td>
+     <td> Lecrae </td>
+     <td> Christian Rap </td>
      <td> ***** </td>
 </tr>
 </table> 
@@ -76,7 +87,8 @@
         <td> Warriors </td>
       </tr>
       <tr>
-        <td> Whatever it Takes </td>
+        <td> Whatever it
+        Takes </td>
         <td> Cake </td>
       </tr>
       <tr>
