--- a/project5.html
+++ b/project5.html
@@ -16,7 +16,7 @@
     <tr>
     <th> Song </th>
     <th> Artist </th>
-    <th> Genre </th
+      <th> Genre </th>
     <th> Rating </th>
     </tr>
     <tr>
