--- a/project6.html
+++ b/project6.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1> style="color: red; text-align: center;"> Hello World!</h1>
+    <h1 style="color: red; text-align: center;"> Hello World!</h1>
     <h2> A place I would like to visit </h2>
     <a href="http://www.profootballhof.com/assets/1/6/HOF_Gallery_Visit-1.jpg">
       <img src="images/Interior_of_the_Hall_of_Fame.jpg" width="300" height="300" alt="Interior of the pro football hall of fame">
