--- a/project6.html
+++ b/project6.html
@@ -5,6 +5,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>My First Web Page</title>
+    <style type="text/css"
+           h2 {text-decoration: underline; text-align: center}
+           </style>
+           
   </head>
 
   <body>
