--- a/project6.html
+++ b/project6.html
@@ -8,6 +8,9 @@
     <style type="text/css">
            h2 {text-decoration: underline; text-align: center}
            </style>
+    <style type="text/css">
+      p {font-family: Tahoma; color: green;}
+    </style>
            
   </head>
 
