--- a/project6.html
+++ b/project6.html
@@ -36,7 +36,7 @@
       <li>Grapefruit</li>
     </ul>
     <h2> Favorite Presidents</h2>
-    <ol>
+    <ol style="font-weight: bold; font-size: 20px>
       <li>JFK</li>
       <li>John Quincy Adams</li>
       <li>George Washington</li>
