--- a/project7.html
+++ b/project7.html
@@ -1,2 +1,52 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>My First Web Page</title>
+    <style type="text/css">
+           h2 {text-decoration: underline; text-align: center}
+           </style>
+    <style type="text/css">
+      p {font-family: Tahoma; color: green;}
+    </style>
+           
+  </head>
+
+  <body>
+    <h1 style="color: red; text-align: center;"> Hello World!</h1>
+    <h2> A place I would like to visit </h2>
+    <a href="http://www.profootballhof.com/assets/1/6/HOF_Gallery_Visit-1.jpg">
+      <img src="images/Interior_of_the_Hall_of_Fame.jpg" width="300" height="300" alt="Interior of the pro football hall of fame">
+    </a>
+    <p> If I could visit anywhere in the world I would go to Canton, Ohio because it is home to the Pro Football Hall of Fame. I would go there because I am a huge football fan, and I have wanted to go there for a very long time. Another reason I would like to go there is because I can see legends, such as, Terrel Davis and LaDanion Tomlinson. If you want to learn more about the Hall of Fame, <a href="http://www.profootballhof.com"target="_blank">click here.</a> <!--This is the link to the Pro Football Hall of Fame website--> </p>
+    <hr>
+    <h2> A person I admire <br> (past or present)</h2>
+    <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Tim_Tebow_Tebowing.jpg/170px-Tim_Tebow_Tebowing.jpg"> 
+      <img src="images/Tim_Tebow_Praying.jpg" width="200" height="300" alt="Tim Tebow praying before a football game for the Denver Broncos" />
+    </a>
+    <p> A person I admire is Tim Tebow. He used to be a football player. In college, he played for the University of Florida and was the starting quarterback. He won the Heisman Trophy in his senior year and was later drafted by the Denver Broncos in the first round of the 2010 NFL Draft. After two years with the Broncos, he was traded to the New York Jets and then to the New England Patriots. He faced more adversity in his life than I thought was possible. He later started a foundation that focuses on teens with down syndrome or other disabilities. This is called the <a href="https://www.timtebowfoundation.org">Tim Tebow Foundation.</a> He holds events for people that couldn't go to their high school prom because of their disabilities. This event is called <a href="https://www.timtebowfoundation.org/index.php/night-to-shine/">Night to Shine.</a> <!--The links for the Tim Tebow Foundation and the Night to Shine are the same because it gives people an alternative option if they don't know what to click on--> </p> 
+    <h2> Favorite Fruits </h2>
+    <ul style="font-type: italic;">
+      <li>Strawberries</li>
+      <li>Oranges</li>
+      <li>Bannanas</li>
+      <li>Pinneapples</li>
+      <li>Grapefruit</li>
+    </ul>
+    <h2> Favorite Presidents</h2>
+    <ol style="font-weight: bold; font-size: 20px;">
+      <li>JFK</li>
+      <li>John Quincy Adams</li>
+      <li>George Washington</li>
+      <li>Abraham Lincoln</li>
+      <li>George W. Bush</li>
+    </ol>
+    <h2> My Favorite Animal </h2>
+    <p> My favorite animal is a  
+      <a href="https://luhilions.github.io/wdp-f17-casi9/project3.html">dog.</a>
+      </p>
+  </body>
 
 </html>
