--- a/project7.html
+++ b/project7.html
@@ -6,6 +6,10 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>My First Web Page</title>
     <style type="text/css">
+      #main-headline {
+        text-align: center; 
+        color: blue;
+      }
            h2 {text-decoration: underline; text-align: center}
            </style>
     <style type="text/css">
@@ -15,7 +19,7 @@
   </head>
 
   <body>
-    <h1 style="color: red; text-align: center;"> Hello World!</h1>
+    <h1 id="main-headline" style="color: red; text-align: center;"> Hello World!</h1>
     <h2> A place I would like to visit </h2>
     <a href="http://www.profootballhof.com/assets/1/6/HOF_Gallery_Visit-1.jpg">
       <img src="images/Interior_of_the_Hall_of_Fame.jpg" width="300" height="300" alt="Interior of the pro football hall of fame">
