--- a/project7.html
+++ b/project7.html
@@ -5,21 +5,16 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>My First Web Page</title>
-    <style type="text/css">
+    <style>
       #main-headline {
-        text-align: center; 
+        text-align: center;
         color: blue;
       }
-           h2 {text-decoration: underline; text-align: center}
-           </style>
-    <style type="text/css">
-      p {font-family: Tahoma; color: green;}
     </style>
-           
   </head>
 
   <body>
-    <h1 id="main-headline" style="color: red; text-align: center;"> Hello World!</h1>
+    <h1 id="main-headline" > Hello World!</h1>
     <h2> A place I would like to visit </h2>
     <a href="http://www.profootballhof.com/assets/1/6/HOF_Gallery_Visit-1.jpg">
       <img src="images/Interior_of_the_Hall_of_Fame.jpg" width="300" height="300" alt="Interior of the pro football hall of fame">
@@ -32,7 +27,7 @@
     </a>
     <p> A person I admire is Tim Tebow. He used to be a football player. In college, he played for the University of Florida and was the starting quarterback. He won the Heisman Trophy in his senior year and was later drafted by the Denver Broncos in the first round of the 2010 NFL Draft. After two years with the Broncos, he was traded to the New York Jets and then to the New England Patriots. He faced more adversity in his life than I thought was possible. He later started a foundation that focuses on teens with down syndrome or other disabilities. This is called the <a href="https://www.timtebowfoundation.org">Tim Tebow Foundation.</a> He holds events for people that couldn't go to their high school prom because of their disabilities. This event is called <a href="https://www.timtebowfoundation.org/index.php/night-to-shine/">Night to Shine.</a> <!--The links for the Tim Tebow Foundation and the Night to Shine are the same because it gives people an alternative option if they don't know what to click on--> </p> 
     <h2> Favorite Fruits </h2>
-    <ul style="font-type: italic;">
+    <ul>
       <li>Strawberries</li>
       <li>Oranges</li>
       <li>Bannanas</li>
@@ -40,7 +35,7 @@
       <li>Grapefruit</li>
     </ul>
     <h2> Favorite Presidents</h2>
-    <ol style="font-weight: bold; font-size: 20px;">
+    <ol>
       <li>JFK</li>
       <li>John Quincy Adams</li>
       <li>George Washington</li>
