--- a/project7.html
+++ b/project7.html
@@ -10,6 +10,10 @@
         text-align: center;
         color: blue;
       }
+      .place-description {
+        font-family: Veranda;
+        coor: olive;
+      }
     </style>
   </head>
 
