--- a/project8.html
+++ b/project8.html
@@ -14,9 +14,11 @@
     <hr> </hr>
     <table border="1">
     <tr>
-    <th> Song </th>
-    <th> Artist </th>
-    <th> Genre </th>
+    <th colspan="2"> Name </th>
+    <th rowspan="3"> Genre 1 </th>
+    <th rowspan="4"> Genre 2 </th>
+    <th rowspan="2"> Genre 3 </th>
+    <th rowspan="1"> Genre 4 </th>
     <th> Rating </th>
     </tr>
     <tr>
@@ -50,4 +52,28 @@
       <td> ***** </td>
       </tr>
       <tr>
-       
+             <td> Whatever It Takes </td>
+      <td> Imagine Dragons </td>
+      <td> Pop </td>
+      <td> ***** </td>
+      </tr>
+    <tr>
+      <td> Thunder </td>
+      <td> Imagine Dragons </td>
+      <td> Pop </td>
+      <td> ***** </td>
+</tr>
+   <tr>
+     <td> Warriors </td>
+     <td> Imagine Dragons </td>
+     <td> Pop </td>
+     <td> **** </td>
+</tr>
+   <tr> 
+     <td> Nuthin </td>
+     <td> Lecrae </td>
+     <td> Christian Rap </td>
+     <td> ***** </td>
+</tr>
+</table> 
+
