--- a/project8.html
+++ b/project8.html
@@ -14,11 +14,8 @@
     <hr> </hr>
     <table border="1">
     <tr>
-    <th colspan="2"> Name </th>
-    <th rowspan="3"> Genre 1 </th>
-    <th rowspan="4"> Genre 2 </th>
-    <th rowspan="2"> Genre 3 </th>
-    <th rowspan="1"> Genre 4 </th>
+    <th> Name </th>
+    <th> Genre </th>
     <th> Rating </th>
     </tr>
     <tr>
