--- a/project8.html
+++ b/project8.html
@@ -14,62 +14,62 @@
     <hr> </hr>
     <table border="1">
     <tr>
-    <th> Name </th>
-    <th> Genre </th>
+    <th colspan="2"> Name </th>
+    <th> Artist </th>
     <th> Rating </th>
     </tr>
     <tr>
+    <td> Hip-Hop/Rap </td>
     <td> XO TOUR LIif3 </td>
     <td> Lil Uzi Vert </td>
-    <td> Hip-hop/Rap </td>
     <td> ***** </td>
     </tr>
     <tr>
-      <td> Rolex </td>
-      <td> Ayo & Teo </td>
       <td> Hip-hop/Rap </td>
+      <td> Roloex </td>
+      <td> Ayo & Teo </td>
       <td> ***** </td>
       </tr>
     <tr>
+      <td> Hip-hop </td>
       <td> do re mi </td>
       <td> blackbear </td>
-      <td> Hip-hop </td>
       <td> **** </td>
       </tr>
     <tr>
+      <td> Pop </td>
       <td> Cake </td>
       <td> Flo Rida </td>
-      <td> Pop </td>
       <td> **** </td>
       </tr>
     <tr>
+      <td> Dance/Electronic </td>
       <td> Bird Machine--Jingle Bells Version </td>
       <td> DJ Snake, Alesia </td>
-      <td> Dance/Electronic </td>
       <td> ***** </td>
       </tr>
       <tr>
-             <td> Whatever It Takes </td>
-      <td> Imagine Dragons </td>
       <td> Pop </td>
+      <td> Whatever it Takes </td>
+      <td> Imagine Dragons </td>
       <td> ***** </td>
       </tr>
     <tr>
+      <td> Pop </td>
       <td> Thunder </td>
       <td> Imagine Dragons </td>
-      <td> Pop </td>
       <td> ***** </td>
 </tr>
    <tr>
+     <td> Pop </td>
      <td> Warriors </td>
      <td> Imagine Dragons </td>
-     <td> Pop </td>
      <td> **** </td>
 </tr>
    <tr> 
-     <td> Nuthin </td>
-     <td> Lecrae </td>
      <td> Christian Rap </td>
+     <td> Nuthin' </td>
+     <td> Lecrae </td>
      <td> ***** </td>
 </tr>
 </table> 
