--- a/project8.html
+++ b/project8.html
@@ -19,49 +19,38 @@
     <th> Rating </th>
     </tr>
     <tr>
-    <td> Hip-Hop/Rap </td>
+    <td rowspan="3"> Hip-Hop/Rap </td>
     <td> XO TOUR LIif3 </td>
     <td> Lil Uzi Vert </td>
     <td> ***** </td>
     </tr>
     <tr>
-      <td> Hip-hop/Rap </td>
       <td> Roloex </td>
       <td> Ayo & Teo </td>
       <td> ***** </td>
       </tr>
     <tr>
-      <td> Hip-hop </td>
       <td> do re mi </td>
       <td> blackbear </td>
       <td> **** </td>
       </tr>
     <tr>
-      <td> Pop </td>
+      <td rowspan="4"> Pop </td>
       <td> Cake </td>
       <td> Flo Rida </td>
       <td> **** </td>
       </tr>
-    <tr>
-      <td> Dance/Electronic </td>
-      <td> Bird Machine--Jingle Bells Version </td>
-      <td> DJ Snake, Alesia </td>
-      <td> ***** </td>
-      </tr>
       <tr>
-      <td> Pop </td>
       <td> Whatever it Takes </td>
       <td> Imagine Dragons </td>
       <td> ***** </td>
       </tr>
     <tr>
-      <td> Pop </td>
       <td> Thunder </td>
       <td> Imagine Dragons </td>
       <td> ***** </td>
 </tr>
    <tr>
-     <td> Pop </td>
      <td> Warriors </td>
      <td> Imagine Dragons </td>
      <td> **** </td>
