--- a/project11.html
+++ b/project11.html
@@ -50,10 +50,10 @@
 
   <body>
    <div class"header"> Header </div>
-   <div class="nav"> Nav Menu </div>
-   <div class="sidebar"> Sidebar </div>
+   <div class="nav floatleft"> Nav Menu </div>
+   <div class="sidebar floatright"> Sidebar </div>
    <div class="main"> <hi>Main Content</hi></div>
-   <div></div>
+   <div class="clearfloat"></div>
    <div class="footer"> Footer </div>
   </body>
 
