--- a/project10.html
+++ b/project10.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>My Favorite Animal</title>
+    <style type="text/css">
+      #text {
+        width: 300px;
+        background-color: lightblue;
+        height: 200px;
+        overflow: auto;
+        margin-top: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border: 6px dashed brown;
+      }
+    </style>
+  </head>
+
+  <body>
+    <h1>My Favorite Animal</h1>
+    <p> <div id="text">
+      <a href="https://static.pexels.com/photos/59523/pexels-photo-59523.jpeg">
+      <img src="images/Puppies.jpg" width="100" height="150" alt="puppy" />
+      </a>
+      A dog is my favorite animal because they are man's best friend. They are very loyal and try their best to be kind and impress you. This dog, in the picture, is sitting in the cookie jar to represent its innocence. 
+    </div>
+    </p>
+    <hr> </hr>
+  <p> 
+    <a href="https://luhilions.github.io/wdp-f17-casi9/">Back to Home Page
+    </a>
+  </body>
+
+</html>
 
