--- a/project10.html
+++ b/project10.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.d}td">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
   <head>
@@ -15,6 +15,10 @@
         padding-left: 10px;
         padding-right: 10px;
         border: 6px dashed brown;
+      }
+      .boldAndUnderlined {
+        font-style: underline;
+        font-style: bold;
       }
     </style>
   </head>
