--- a/project10.html
+++ b/project10.html
@@ -29,7 +29,7 @@
       <a href="https://static.pexels.com/photos/59523/pexels-photo-59523.jpeg">
       <img src="images/Puppies.jpg" width="100" height="150" alt="puppy" />
       </a>
-      A dog is my favorite animal because they are man's best friend. They are very loyal and try their best to be kind and impress you. This dog, in the picture, is sitting on the floor starng at its master to represent its loyalty and innocence. 
+    A <span class="boldAndUnderlined">dog</span> is my favorite animal because they are <span class="boldAndUnderlined"> man's best friend.</span> They are very loyal and try their best to be kind and impress you. This dog, in the picture, is sitting on the floor starng at its master to represent its loyalty and innocence. 
     </div>
     </p>
     <hr> </hr>
