--- a/project9.html
+++ b/project9.html
@@ -34,6 +34,17 @@
 
   <body>
     <table class="weather collapse">
+    <tr>
+      <th class="col.1"> Monday </th>
+      <th class="col.2"> Tuesday </th>
+      <th class="col."> Wednesday </th>
+      <th class="col.4"> Thursday </th>
+      <th class="col.5"> Friday </th>
+    </tr>
+    <tr>
+      <td> 27 </td>
+      <td> 0 </td>
+      <td> Snowy </td>
       
   </body>
 
