--- a/project9.html
+++ b/project9.html
@@ -45,8 +45,8 @@
       <td> 27 </td>
       <td> 0 </td>
       <td> Snowy </td>
-      <td> images="images/4A29EA68-53E9-4DF7-AF3B-C71A4FE9574B.jpg" width=100% height=100% alt="snow falling from the sky" </td>
-      </tr>
+      <td> <img src="images/4A29EA68-53E9-4DF7-AF3B-C71A4FE9574B.jpg" width=100% height=100% alt="snow falling from the sky"> </td>
+    </tr>
   </body>
 
 </html>
