--- a/project9.html
+++ b/project9.html
@@ -47,6 +47,11 @@
       <td> Snowy </td>
       <td> <img src="images/4A29EA68-53E9-4DF7-AF3B-C71A4FE9574B.jpg" width=100% height=100% alt="snow falling from the sky"> </td>
     </tr>
+      <tr>
+      <td> 44 </td>
+      <td> 32 </td>
+      <td> Showers </td>
+      <td> <img src="
   </body>
 
 </html>
