--- a/project9.html
+++ b/project9.html
@@ -45,12 +45,18 @@
       <td> 27 </td>
       <td> 0 </td>
       <td> Snowy </td>
-      <td> <img src="images/4A29EA68-53E9-4DF7-AF3B-C71A4FE9574B.jpg" width=100% height=100% alt="snow falling from the sky"> </td>
+      <td> <img src="images/4A29EA68-53E9-4DF7-AF3B-C71A4FE9574B.jpg" width="100%" height="100%' alt="snow falling from the sky"> </td>
     </tr>
-      <tr>
+    <tr>
       <td> 44 </td>
       <td> 32 </td>
-      <td> Showers </td>
+      <td> Thunderstorms </td>
+      <td> <img src="7AFD63B3-A5BC-4CB4-82A1-C50A22B616B8.jpg" width="100%" height="100%" alt="Lightning striking behind house during a thunder storm"></td>
+    </tr>
+    <tr>
+      <td> 65 </td>
+      <td> 50 </td>
+      <td> Partly Cloudy </td>
       <td> <img src="
   </body>
 
