--- a/project9.html
+++ b/project9.html
@@ -12,18 +12,23 @@
       }
       .col1 {
         width: 20%;
+        border: 1px dashed blue;
       }
       .col2 {
         width: 20%;
+        border: 1px dashed blue;
       }
       .col3 {
         width: 20%;
+        border: 1px dashed blue;
       }
       .col4 {
         width: 20%;
+        border: 1px dashed blue;
       }
       .col5{
         width: 20%;
+        border: 1px dashed blue;
       }
       .collapse {
         border-collapse: collapse;
@@ -37,7 +42,7 @@
     <tr>
       <th class="col.1"> Monday </th>
       <th class="col.2"> Tuesday </th>
-      <th class="col."> Wednesday </th>
+      <th class="col.3"> Wednesday </th>
       <th class="col.4"> Thursday </th>
       <th class="col.5"> Friday </th>
     </tr>
