--- a/project9.html
+++ b/project9.html
@@ -62,6 +62,12 @@
       <td> 65 </td>
       <td> 50 </td>
       <td> Partly Cloudy </td>
+      <td> <img src="4EDE106E-74EC-4835-AAF9-CABF002053A8.png" width="100% height="100%" alt="Cloud in front of the sun"> </td>
+    </tr>
+    <tr>
+      <td> 75 </td>
+      <td> 60 </td>
+      <td> Sunny </td>
       <td> <img src="
   </body>
 
