--- a/project9.html
+++ b/project9.html
@@ -62,13 +62,21 @@
       <td> 65 </td>
       <td> 50 </td>
       <td> Partly Cloudy </td>
-      <td> <img src="4EDE106E-74EC-4835-AAF9-CABF002053A8.png" width="100% height="100%" alt="Cloud in front of the sun"> </td>
+      <td> <img src="4EDE106E-74EC-4835-AAF9-CABF002053A8.png" width="100%" height="100%" alt="Cloud in front of the sun"> </td>
     </tr>
     <tr>
       <td> 75 </td>
       <td> 60 </td>
       <td> Sunny </td>
-      <td> <img src="
+      <td> <img src="84581DC6-45BD-4526-A1CF-754E8A4A32DE.jpg" width="100%" height="100%" alt="Sunny skies over a green pasture"> </td>
+    </tr>
+    <tr>
+      <td> 85 </td>
+      <td> 76 </td>
+      <td> Warm </td>
+      <td> <img src="84581DC6-45BD-4526-A1CF-754E8A4A32DE.jpg" width="100%" height="100%" alt="Sunny skies over a green pasture"> </td>
+    </tr>
+      </table>
   </body>
 
 </html>
