--- a/project12.html
+++ b/project12.html
@@ -46,7 +46,7 @@
     .floatright {
     float: right;
     }
-    .body {
+    body {
       background-image: url('images/tile_texture.jpg');
       background-color: gray;
       }
