--- a/project12.html
+++ b/project12.html
@@ -47,7 +47,7 @@
     float: right;
     }
     body {
-      background-image: url('images/tile_texture.jpg);
+      background-image: url('images/tile_texture.jpg');
       background-color: gray;
       }
       a:link { color: blue; }
