--- a/project13.html
+++ b/project13.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>Page Title Goes Here</title>
+    <style>
+      body {
+        font-size: 20px;
+        font-family: Arial;
+      }
+      .header {
+        height: 50px;
+        background-color: teal;
+      }
+      .even{
+       background-color: green; 
+      }
+      .odd {
+        background-color: yellow;
+      }
+  </head>
+
+  <body>
+    <table>
+      <tr class="header">
+        <th></th>
+        <th></th>
+      </tr>
+      <tr class="odd">
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="even">
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="odd">
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="even">
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="odd">
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="even">
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="odd">
+        <td></td>
+        <td></td>
+      </tr>
+  </body>
+
+</html>
