--- a/project13.html
+++ b/project13.html
@@ -25,12 +25,12 @@
   <body>
     <table>
       <tr class="header">
-        <th></th>
-        <th></th>
+        <th>Description</th>
+        <th>Result</th>
       </tr>
       <tr class="odd">
-        <td></td>
-        <td></td>
+        <td>Fraction 3/4</td>
+        <td>&frac3/4;</td>
       </tr>
       <tr class="even">
         <td></td>
