--- a/project13.html
+++ b/project13.html
@@ -10,6 +10,12 @@
         font-size: 20px;
         font-family: Arial;
       }
+      tr {
+        text-align: center;
+      }
+      td,th {
+        padding: 4px;
+      }
       .header {
         height: 50px;
         background-color: teal;
@@ -56,6 +62,7 @@
         <td></td>
         <td></td>
       </tr>
+       </table>
   </body>
 
 </html>
