--- a/project13.html
+++ b/project13.html
@@ -39,28 +39,28 @@
         <td>&frac3/4;</td>
       </tr>
       <tr class="even">
-        <td></td>
-        <td></td>
+        <td>Copyright</td>
+        <td>&copy;</td>
       </tr>
       <tr class="odd">
-        <td></td>
-        <td></td>
+        <td>Ampersand</td>
+        <td>&amp;</td>
       </tr>
       <tr class="even">
-        <td></td>
-        <td></td>
+        <td>Less Than</td>
+        <td>&lt;</td>
       </tr>
       <tr class="odd">
-        <td></td>
-        <td></td>
+        <td>Greater Than</td>
+        <td>&gt;</td>
       </tr>
       <tr class="even">
-        <td></td>
-        <td></td>
+        <td>Division</td>
+        <td>&divide;</td>
       </tr>
       <tr class="odd">
-        <td></td>
-        <td></td>
+        <td>Spade</td>
+        <td>&spades;</td>
       </tr>
        </table>
   </body>
