--- a/project12.html
+++ b/project12.html
@@ -5,7 +5,6 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Page Title Goes Here</title>
-    <style>
     .header {
     width: 100%;
     height: 100 px;
@@ -50,14 +49,15 @@
       background-image: url('images/tile_texture.jpg');
       background-color: gray;
       }
-      a:link { color: blue; }
+      a:link { color: blue;
+    font-weight: bold;}
  a:visited { color: green; }
  a:hover { color: orange;
       text-decoration: none;}
  a:active { color: red; }
       
       /* Colin is a little friend */
-    </style>
+   <link rel="stylesheet" type="text/css" href="css/ layout.style-css" /> 6
   </head>
 
   <body>
