--- a/project18.html
+++ b/project18.html
@@ -5,21 +5,19 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Solitare</title>
-    <style text/css>
-    .felt{
-    width: 300px;
-    height: 300px;
-    background-image: url('../img/felt2.jpg');
-    background-color: green;
-    position: relative;
-    top: 25px;
-    left: 25px;
-    }
+    <link rel="stylesheet" type="text/css" href="css/solitaire.css" />
+    
     
   </head>
 
   <body>
-  <div class=felt></div>
+  <div class="felt">
+    <img src="images/card.png" class="back" width="64" height="100" alt="back of card"/>
+    <img src="images/kingspades.png" class="king" width="64" height="100" alt="King of Spades"/>
+    <img src="images/queenhearts.png" class="queen" width="64" height="100" alt="Queen of hearts"/>
+    <img src="images/jackclubs.png" class="jack" width="64" height="100" alt="Jack of Clubs"/>
+    <img src="images/tendiamonds.png" class="ten" width="64" height="100" alt="Ten of diamonds"/>
+  </div>
   </body>
 
 </html>
