--- a/project17.html
+++ b/project17.html
@@ -52,3 +52,26 @@
       }
       a:link { color: blue; }
  a:visited { color: green; }
+      text-decoration: none;}
+ a:active { color: red; }
+      
+      /* Colin is a little friend */
+   <link rel="stylesheet" type="text/css" href="css/ layout.style-css" /> 6
+  </head>
+
+  <body>
+   <div class"header"> Header </div>
+   <div class="nav floatleft"> Nav Menu <br/>
+      <a href="project3.html"> Favorite Animal</a><br/>
+      <a href="project4.html"> Photo Gallery </a><br/>
+      <a href="project5.html"> Favorite Music </a><br/>
+      <a href="project7.html"> All About Me </a><br/>
+   </div>
+   <div class="sidebar floatright"> Sidebar </div>
+   <div class="main"> <hi>Main Content</hi></div>
+   <div class="clearfloat"></div>
+   <div class="footer"> Footer </div>
+  </body>
+
+</html>
+
